--- a/simple-crm/package.json
+++ b/simple-crm/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.7",
     "@angular/platform-browser": "^17.3.0",
@@ -24,6 +25,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
     "express": "^4.18.2",
+    "firebase": "^10.12.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
